force-app/main/default/objects/Account/fields/accountrevenue__c.field-meta.xml
<CustomField>
    <fullName>accountrevenue__c</fullName>
    <inlineHelpText>Enter account revenue :</inlineHelpText>
    <label>accountrevenue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>