force-app/main/default/objects/Account/fields/OpportunityAmountSum__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAmountSum__c</fullName>
    <label>OpportunityAmountSum</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>