force-app/main/default/objects/Account/fields/Savingsaccountnumber__c.field-meta.xml
<CustomField>
    <fullName>Savingsaccountnumber__c</fullName>
    <label>Savingsaccountnumber</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>