force-app/main/default/objects/Account/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>