force-app/main/default/objects/Account/fields/supportemail__c.field-meta.xml
<CustomField>
    <fullName>supportemail__c</fullName>
    <label>supportemail</label>
    <type>Email</type>
</CustomField>