force-app/main/default/objects/Account/fields/SupportPhone__c.field-meta.xml
<CustomField>
    <fullName>SupportPhone__c</fullName>
    <label>SupportPhone</label>
    <type>Phone</type>
</CustomField>