force-app/main/default/objects/Account/recordTypes/Practice1.recordType-meta.xml
<RecordType>
    <fullName>Practice1</fullName>
    <active>true</active>
    <label>Practice1</label>
</RecordType>