force-app/main/default/objects/Account/recordTypes/Wholesale.recordType-meta.xml
<RecordType>
    <fullName>Wholesale</fullName>
    <active>true</active>
    <label>Wholesale</label>
</RecordType>