force-app/main/default/objects/Account/validationRules/activeornah.validationRule-meta.xml
<ValidationRule>
    <fullName>activeornah</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ispickval(Active__c, &#39;Yes&#39;), contains(Description, &quot;failed&quot;))</errorConditionFormula>
    <errorMessage>Cannot enable active on a rejected account.</errorMessage>
</ValidationRule>