force-app/main/default/objects/Account/validationRules/HotAnnualRevenueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>HotAnnualRevenueValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( AnnualRevenue &lt; 10000, ISPICKVAL(Rating, &#39;Hot&#39;))</errorConditionFormula>
    <errorMessage>To mark rating as Hot, annual revenue should be greater than 99,999</errorMessage>
</ValidationRule>