force-app/main/default/objects/Account/validationRules/NullCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NullCheck</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(AnnualRevenue)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue cannot be a null value.</errorMessage>
</ValidationRule>